[gd_scene load_steps=8 format=2]

[ext_resource path="res://Objects/Game/Game.gd" type="Script" id=1]
[ext_resource path="res://Objects/Game/FPSCounter.gd" type="Script" id=2]
[ext_resource path="res://Objects/Interface/ViewportAndOverlay/ViewportAndOverlay.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Interface/StartMenu/StartMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/Interface/Window/RocketInspector/RocketInspector.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objects/Interface/EndScreen/EndScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://Objects/Interface/Credits/Credits.tscn" type="PackedScene" id=7]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportAndOverlay" parent="." instance=ExtResource( 3 )]

[node name="StartMenu" parent="." instance=ExtResource( 4 )]

[node name="EndScreen" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Credits" parent="." instance=ExtResource( 7 )]
visible = false

[node name="FPS" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -112.0
margin_bottom = 14.0
text = "FPS: "
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="FPS"]
margin_left = 66.0
margin_right = 104.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -253.0
margin_top = 16.0
margin_right = -8.0
margin_bottom = 115.0
text = "Arrow Keys or WASD - Movement
Mouse Wheel - Zoom
Left Click - Change Ship
Space - Fire Weapon
I - Inspect Ship
M - Mute Sounds
, or . - Lower or Raise Volume
End - Show Credits
H - Help (Command List)
"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RocketInspector" parent="." instance=ExtResource( 5 )]
visible = false
margin_top = 0.0
margin_bottom = 0.0
rect_min_size = Vector2( 0, 0 )
theme = null
[connection signal="world_space_ready" from="ViewportAndOverlay" to="." method="_on_ViewportAndOverlay_world_space_ready"]
[connection signal="start_game_triggered" from="StartMenu" to="." method="_on_StartMenu_start_game_triggered"]
